# marine-debris-classifier

./: .gitignore  README.md  pyproject.toml
notebooks/: deploy.ipynb  week1_data_preprocessing.ipynb
