[project]
name = "marine-debris-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.0",
    "notebook>=7.6.0",
    "numpy>=2.5.1",
    "pillow>=12.3.0",
]
